--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/listavip
 spring.datasource.username=root
 spring.datasource.password=Root@123
 spring.jpa.hibernate.ddl-auto=update
+server.port=9000
+sprint.jpa.show-sql=true
